--- a/.choreo/endpoints.yaml
+++ b/.choreo/endpoints.yaml
@@ -1,3 +1,4 @@
+version: 0.1
 schemaVersion: "1.1"
 endpoints:
     - name: books-rest-endpoint-d70
@@ -9,4 +10,6 @@ endpoints:
       networkVisibilities:
         - Project
         - Public
+      context: /reading-list
+      port:8080
       schemaFilePath: openapi.yaml
